Changed readable title

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         },
         "flarum-locale": {
             "code": "gl",
-            "title": "Galician"
+            "title": "Galego"
         }
     }
 }
